# Solar-system-opengl

./: .gitattributes  .gitignore  CMakeLists.txt  ShadowMap.h  ShadowMapTech.cpp  ShadowMapTech.h  body.cpp  body.h  camera.cpp  camera.h  fragment_shader.frag  glsimulation.cpp  glsimulation.h  main.cpp  mainwindow.cpp  mainwindow.h  sphere.blend  vertex_shader.vert  world.cpp  world.h
resources/: Sphere.stl  Sphere1.x3d  fragment_shader.frag  sphere.x3d  vertex_shader.vert
resources/models/: CubSat3UVR.mtl  CubSat6U.mtl  earth.mtl
resources/models/Cube/: Cube.mtl
resources/models/Earth/: Earth.mtl
resources/models/Mercury/: Mercury.mtl
resources/models/Moon/: Moon.mtl
resources/models/Neptune/: Neptune.mtl
resources/models/Sun/: Sun.mtl
resources/settings/: BodiesList.json  Earth.json  Moon.json  Sattelite.json  Settings.json  Sun.json
resources/shaders/: fragment_shader.frag  shadow_map_frag.frag  shadow_map_vertex.vert  vertex_shader.vert
resources/shaders/Body/: fragment_shader.frag  vertex_shader.vert
resources/shaders/shadowMapGenerator/: shadow_map_frag.frag  shadow_map_vertex.vert
resources/shaders/shadowMapGeneratorPointLight/: shadow_map_frag.frag  shadow_map_vertex.vert
